<resources>
    <string name="about"><a href='http://www.freepik.es/vector-gratis/conjunto-de-iconos-acerca-de-los-mapas_959358.htm'>Designed by Freepik</a></string>
    <string name="app_name">SOS Places</string>
    <string name="place_activity_label">Cerca de tí</string>
    <string name="place_detail_activity_label">Detalles</string>
    <string name="place_favorites_activity_label">Favoritos</string>
    <string name="place_add_fav_label">Agregar favorito</string>

    <string name="alert_gps_title">Ajustes de GPS</string>
    <string name="alert_gps_msg">El GPS no está habilitado. ¿Desea ir al menu de Ajustes?</string>
    <string name="alert_gps_btn_ok">Ajustes</string>
    <string name="alert_gps_btn_no">Cancelar</string>
    <string name="google_api_nearby_search_url">"https://maps.googleapis.com/maps/api/place/nearbysearch/json?"</string>
    <string name="google_api_place_details_url">"https://maps.googleapis.com/maps/api/place/details/json?"</string>
    <string name="google_api_place_photo_url">"https://maps.googleapis.com/maps/api/place/photo?"</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_email">Esta dirección de correo electrónico es inválida</string>
    <string name="error_invalid_password">Contraseña mínimo 5 caracteres, máximo 25</string>
    <string name="error_incorrect_password">La contraseña es incorecta</string>
    <string name="error_field_required">Este campo es necesario</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="fullname_max">El máximo son 25 caracteres</string>
    <string name="nickname_max">El máximo son 10 caracteres</string>
    <string name="action_register">Registrarse</string>
    <string name="title_activity_resgistrase">Registro</string>
    <string name="uuser_name">Nickname</string>
    <string name="aceptar">Aceptar</string>
    <string name="warning">Advertencia</string>
    <string name="cancelar">Cancelar</string>
    <string name="salir">¿Desea salir de la aplicación?</string>
    <string name="login">Iniciar sesión</string>
    <string name="title_activity_chat_firebase">Sala de chats</string>
    <string name="title_activity_chats_list">Grupos de chats</string>
    <string name="full_name">Nombre completo</string>
</resources>
